# server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
conf/: cert.pem  key.pem  mime.conf  mime.yaml  server-ssl.conf  server.conf  server.yaml
conf/servers/: https.yaml
examples/: CMakeLists.txt
examples/crud/: CMakeLists.txt
examples/crud/src/: CMakeLists.txt  main.c
examples/manul/conf/: manul.yaml
examples/manul/conf/servers/: https.yaml
examples/manul/src/: main.c
examples/manul/www/: chmod000
examples/manul/www/cgi-bin/: env.cgi
manul/: CMakeLists.txt
manul/conf/: manul.yaml
manul/src/: CMakeLists.txt  main.c
manul/www/: index.html
manul/www/test/: loose-php.php  textplain.txt
src/: CMakeLists.txt  bytebuf.h  cgi.c  cgi.h  common.c  common.h  config.c  config.h  crlf.h  def.h  exec.c  exec.h  http.h  kv.c  kv.h  main.c  mime.c  mime.h  options.h.in  path.c  path.h  router.c  router.h  server.c  server.h  shutdown.c  shutdown.h  url.c  url.h
src/cluster/: CMakeLists.txt  cluster.c  cluster.h
src/conf/: CMakeLists.txt  config.c  config.h  servers.c  servers.h
src/http/: CMakeLists.txt  headers.c  headers.h  request.c  request.h  request_line.c  request_line.h  response.c  response.h  status.c  status.h
src/lib/: CMakeLists.txt  bytebuf.c  bytebuf.h  config.c  config.h  crlf.c  crlf.h  http.c  http.h  kv.c  kv.h  mime.c  mime.h  path.c  str.c  str.h  url.c  url.h
src/router/: CMakeLists.txt  router.c  router.h
src/serve/: CMakeLists.txt  cgi.c  cgi.h  error.c  error.h  file.c  file.h  index.c  index.h  serve.c  serve.h  string.c  string.h
src/server/: CMakeLists.txt  accept.c  client.c  client.h  listen.c  server.c  server.h
test/: test.sh
vhttpsl/: CMakeLists.txt
vhttpsl/bits/: CMakeLists.txt
vhttpsl/bits/include/vhttpsl/bits/: def.h  kv.h  minmax.h  path.h  shutdown.h
vhttpsl/bits/src/: bytebuf.c  kv.c  path.c  shutdown.c  str.c
vhttpsl/example/: CMakeLists.txt  example.c
vhttpsl/include/: vhttpsl.h
vhttpsl/include/vhttpsl/: app.h  http.h  listener.h  server.h  ssl.h
vhttpsl/include/vhttpsl/app/: request.h  response.h
vhttpsl/include/vhttpsl/http/: headers.h  methods.h  request.h  request_line.h  response.h  url.h
vhttpsl/src/: CMakeLists.txt  app.c  app.h  server.c  server.h  socket_context.c  socket_context.h  ssl.c  ssl_backend.c  ssl_backend.h  vhttpsl.c
vhttpsl/src/http/: CMakeLists.txt  headers.c  methods.c  request.c  request_line.c  response.c  session.c  session.h  status.c  url.c
vhttpsl/src/listener/: CMakeLists.txt  listener.c  listener_ctx.c  listener_ctx.h  listener_init.c
vhttpsl/test/: CMakeLists.txt  headers_test.c  request_line_test.c  uri_test.c
www/: 404.html
www/test/cgi-bin/: cgi-no-exec.cgi  cgi-no-interp.sh  non-loose-cgi.pl
