target_sources(server
        PRIVATE
        cgi.h
        cgi.c
        exec.h
        exec.c
        router/router.h
        router/router.c
        server.h
        server.c
        options.h
        main.c
        )

add_subdirectory(conf)
add_subdirectory(serve)
add_subdirectory(server)
add_subdirectory(cluster)
add_subdirectory(lib)
add_subdirectory(router)